# IronVault

./: .gitignore  Cargo.toml  PROJECT_CHECKPOINT.md  README.md
config/: ironvault.example.toml  ironvault.test.toml
crates/ironvault-cli/: Cargo.toml
crates/ironvault-cli/src/: commands.rs  main.rs
crates/ironvault-cli/tests/: mvp_backup_restore.rs
crates/ironvault-core/: Cargo.toml
crates/ironvault-core/src/: chunker.rs  compression.rs  config.rs  errors.rs  hash.rs  hasher.rs  lib.rs  lock.rs  manifest.rs  metadata.rs  prune.rs  repository.rs  restore.rs  safety.rs  scanner.rs  snapshot.rs
crates/ironvault-daemon/: Cargo.toml
crates/ironvault-daemon/src/: main.rs
docs/: FINAL_RELEASE_CHECKLIST.md  GUI_BRIDGE.md  GUI_DESIGN_BRIEF.md  GUI_USER_FLOW.md  repository-format.md  restore-guide.md  roadmap.md  safety-model.md
frontend/ironvault-gui/: index.html  package-lock.json  package.json
frontend/ironvault-gui/src/: App.vue
frontend/ironvault-gui/src-tauri/: Cargo.toml  tauri.conf.json
frontend/ironvault-gui/src-tauri/capabilities/: default.json
frontend/ironvault-gui/src-tauri/src/: lib.rs  main.rs
frontend/ironvault-gui/src/assets/: main.css
frontend/ironvault-gui/src/lib/: ironvaultBridge.ts  ironvaultSettings.ts
frontend/ironvault-gui/src/router/: index.ts
frontend/ironvault-gui/src/views/: Backup.vue  Dashboard.vue  Logs.vue  Restore.vue  Settings.vue  Snapshots.vue
scripts/: build-release-candidate.sh  install.sh
systemd/: ironvault-backup.service  ironvault-backup.timer
