[package]
name = "ironvault-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Command-line interface for IronVault"

[[bin]]
name = "ironvault"
path = "src/main.rs"

[dependencies]
ironvault-core = { path = "../ironvault-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
humansize = { workspace = true }

[dev-dependencies]
filetime = { workspace = true }
